src/test/deca/codegen/invalid/homemade/autoreferencement.ass
; ADDSP : method table size : 4, nb of var 1
	ADDSP #5
; start main program
; Generation of the method table of Object
	LOAD #null, R0
	STORE R0, 1(GB)
	LOAD Code.Object.equals, R0
	STORE R0, 2(GB)
; Generation of the method table of : A
	LEA 1(GB), R0
	STORE R0, 3(GB)
	LOAD Code.Object.equals, R0
	STORE R0, 4(GB)
; Main program
; Global variables initialization
	NEW #2, R2
	BOV heapFull
	LEA 3(GB), R0
	STORE R0, 0(R2)
	PUSH R2
	BSR init.A
	POP R2
	STORE R2, 5(GB)
; Beginning of main instructions:
	HALT
init.object:
	RTS
init.A:
; save registers
	PUSH R2
; initialization of own fields
; Initialization of field a
	LOAD -2(LB), R1
	NEW #2, R2
	BOV heapFull
	LEA 3(GB), R0
	STORE R0, 0(R2)
	PUSH R2
	BSR init.A
	POP R2
	LOAD R2, R0
	STORE R0, 1(R1)
; restore registers
	POP R2
	RTS
Code.Object.equals:
	LOAD -2(LB), R0
	LOAD -3(LB), R1
	CMP R0, R1
	SEQ R0
	RTS
heapFull:
	WSTR "ERROR : allocation failed because of full heap"
	WNL
	ERROR
; end main program
